# VoxelEngine

OpenGLPractice/: OpenGLPractice.sln
OpenGLPractice/OpenGLPractice/: OpenGLPractice.vcxproj  OpenGLPractice.vcxproj.filters  Shader.cpp  glad.c  main.cpp  simplecolor.frag  simplevertex.vert
OpenGLPractice/OpenGLPractice/include/: Shader.h
OpenGLPractice/OpenGLPractice/include/glad/: glad.h
OpenGLPractice/OpenGLPractice/x64/Release/: OpenGLPractice.exe.recipe  OpenGLPractice.iobj  OpenGLPractice.ipdb
OpenGLPractice/OpenGLPractice/x64/Release/OpenGLPractice.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLPractice.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGLPractice/include/: Shader.h  controls.h
OpenGLPractice/src/: controls.cpp  main.cpp  simplecolor.frag  simplevertex.vert  tutorial.cpp
OpenGLVoxel/: CMakeLists.txt
OpenGLVoxel/include/: controls.h  readVox.h
OpenGLVoxel/src/: Shader.cpp  castle.vox  controls.cpp  raytracevoxel.frag  readVox.cpp  simplecolor.frag  simplevertex.vert  testlarge.vox  voxel.vert  voxelMainGL.cpp
